// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders correctly 1`] = `
<div
  className="modal show"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-body"
      >
        Modal
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders with a certain size correctly 1`] = `
<div
  className="modal show"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog modal-lg"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-body"
      >
        Large Modal
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders with a footer correctly 1`] = `
<div
  className="modal show"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-body"
      >
        Modal with Footer
      </div>
      <div
        className="modal-footer"
      >
        footer
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders with a header correctly 1`] = `
<div
  className="modal show"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <div
          className="modal-title"
        >
          header
        </div>
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="lexicon-icon lexicon-icon-times"
          >
            <use
              xlinkHref="#times"
            />
          </svg>
        </button>
      </div>
      <div
        className="modal-body"
      >
        Modal with Header
      </div>
    </div>
  </div>
</div>
`;
